@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST draper-0.14.0.gem 79360 SHA256 8bea54981f04c6b27ac48f74ee396768fc366d4ea1eb39a45022faa6456fba27 SHA512 7838456dd3c810057b7500f5e60a3d814c05586b625ab4ac624a33f750ce8ae94f227f465c6a0155120e6000dad3bb033f4dccf663dc073b1140c8afb78635e0 WHIRLPOOL 136ab85bc22a97ccdca184e8e0b7a8ed171ba6e46d4cc96d24b20fc71e53a511f32df4b52f9b27a8b79370292d49a2d1a84d3826edece00500b37109d8476cda
 DIST draper-0.17.0.gem 81408 SHA256 e2cdcba4c59620afc15e16c5fd2462a150296bdf38f5f41a4333c4507bd6add3 SHA512 ffbb5eb8ff24296730d63002c919e2773260ff8a3222cf3d94a0c5e530a6855ceabc5d69eab490d9a47a6d6420ee9741f72b957ef1601e362cf242142ed82d59 WHIRLPOOL d62770f6183de374ae090e68eada8952488e17907fa65399fb3aa9da3ef442f536d1c76ff328e3c4461acd09fded07cab6496172f40990c453915d00bd0b7761
+DIST draper-0.18.0.gem 26624 SHA256 32c3fb7931d1861b4b8e43d6141cc63439ac5572486846e2577ff9754fcd1e8c SHA512 d427f303b6fb5769194ac7dc44facc75c3c060cd77ff62a7e08ec621a78723d2897d58125c5f713036df15290f25ece71fb98ff9eda236a78e9c86a628dfd62e WHIRLPOOL 344328debc6a7e3e56e73016857325a8aeb6bdd76188756d0a7e3d736896caa9262f47e953fb57b02c453d31ca955737c86f206cd4975782d04bc8a43de454cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBNqLQACgkQiIP6VqMIqNcC2QD+Lzid1dUP0fz97Y87gPAtmqOa
-LOY3kwJ84Yjn0zftOf4A/2wqmJTJx69dSbCYsgil9SCKJWW6O5C3i5V8HUCadn8f
-=G0nS
+iF4EAREIAAYFAlCjtqIACgkQiIP6VqMIqNfBTwEAjtDOjM2m/AwIabzoyIWvtREG
+st0EyEEowbYfFLZFOd8A/2RxK72dTvYczMOc9xTVm0a4vsGaEQReuaqs/js8SnJW
+=al0K
 -----END PGP SIGNATURE-----
